--- a/src/abn_tree_template.jade
+++ b/src/abn_tree_template.jade
@@ -21,4 +21,4 @@ div.nestedTree
             ng-click="row.branch.expanded = !row.branch.expanded"
             )
 
-          span.indented.tree-label {{ row.label }}
+          span.indented.tree-label {{ row.title }}
