--- a/src/abn_tree_template.jade
+++ b/src/abn_tree_template.jade
@@ -26,4 +26,4 @@ div.nestedTree
             class="{{ row.icon }}"
             )
 
-          span.indented.tree-label {{ row.title }}
+          span.indented.tree-label {{ row.type }} {{ row.icon }} {{ row.title }}
